--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,7 @@
 authors = [
   {name = "Jason Ho"}
 ]
-description = """CLI tool demonstrating test-to-code traceability techniques on Python codebases that 
-use the Pytest testing framework."""
+description = """CLI tool demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
 readme = "README.md"
 dynamic = ["dependencies"]
 name = "tctracer"
