--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ classifiers=[
     "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.11"
+dependencies = [
+  "matplotlib==3.8.3",
+  "scikit-learn==1.4.1.post1",
+  "click==8.1.7",
+  "pytest==8.1.1"
+]
+
+[tool.setuptools]
+packages = ["pytctracer"]
 
 [build-system]
 requires = ["setuptools >= 61.0"]
@@ -21,3 +30,11 @@ build-backend = "setuptools.build_meta"
 
 [project.scripts]
 tctracer = "pytctracer.main:cli"
+
+[project.optional-dependencies]
+dev = [
+  "black==24.3.0",
+  "pylint==3.1.0",
+  "setuptools==69.2.0",
+  "bump2version==1.0.1"
+]
