--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
   "matplotlib==3.8.3",
   "scikit-learn==1.4.1.post1",
   "click==8.1.7",
-  "pytest==8.1.1"
+  "pytest<=8.1.0"
 ]
 
 [tool.setuptools.packages.find]
