--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-tctracer = "pytctracer.main:cli"
+tctracer = "pytctracer.cli:cli"
 
 [project.optional-dependencies]
 dev = [
