--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ authors = [
 ]
 description = """CLI tool demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
 readme = "README.md"
-name = "tctracer"
+name = "pytctracer"
 version = "0.1.7"
 classifiers=[
     "Natural Language :: English",
@@ -20,6 +20,7 @@ dependencies = [
   "click==8.1.7",
   "pytest<=8.1.0"
 ]
+urls = { "Repository" = "https://github.com/jasonho2582001/comp0138-pytctracer" }
 
 [tool.setuptools.packages.find]
 where = ["."] 
@@ -29,7 +30,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-tctracer = "pytctracer.cli:cli"
+pytctracer = "pytctracer.cli:cli"
 
 [project.optional-dependencies]
 dev = [
