--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 authors = [
   {name = "Jason Ho"}
 ]
-description = """CLI tool demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
+description = """Research library demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
 readme = "README.md"
 name = "pytctracer"
 version = "0.1.8"
