--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
   "matplotlib==3.8.3",
   "scikit-learn==1.4.1.post1",
   "click==8.1.7",
-  "pytest<=8.1.0"
+  "pytest<=8.1.0",
+  "python-dotenv==1.0.1"
 ]
 urls = { "Repository" = "https://github.com/jasonho2582001/comp0138-pytctracer" }
 
